Cleaned up controllers. Updated manager interfaces. Still need to update implementations.
